--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -3,9 +3,29 @@
 <% if show_ads %>
     <%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "2440491879"} %>
 <% end %>
-<h1 class="page__title">Play free games. Earn real cash.</h1>
+
+<% if @dunkin_user %>
+    <h1 class="page__title">Play free games. Earn real rewards.</h1>
+<% else %>
+    <h1 class="page__title">Play free games. Earn real cash.</h1>
+<% end %>
 
 <div class='game-list-container'>
+    <% if @dunkin_user %>
+        <a href="//www.youtube.com/watch?v=X_X16Iwk4N4" data-lity>
+            <div class="game-wrapper game--fastest-way-to-dd js-game--fastest-way-to-dd">
+
+                <img class="game-image" src="/assets/fastest-way-to-dd.jpg">
+
+                <div class="game__info">
+                    <h1 class="game__title">Watch Fastest Way to Dunkin</h1>
+                    <span class="credits">Earn 20 Credits</span>
+                </div>
+
+            </div> <!--/ .game-wrapper -->
+        </a>
+    <% end %>
+
         <% @games.each do | g | %>
             <% if g.device_type != 5 || current_user.has_purchased_game(g.id) %>
             <%= link_to game_path(g,a:@advertiser_id) do %>
@@ -39,4 +59,11 @@
                 <% end %>
             <% end %>
         <% end %>
-</div>
+</div><!-- /.game-list-container -->
+
+<% if @dunkin_user %>
+    <script>
+        var lightbox = lity();
+        $(document).on('click', '[data-lightbox]', lightbox);
+    </script>
+<% end %>
