--- a/app/views/games/show_mobile.html.erb
+++ b/app/views/games/show_mobile.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title, "#{@game.name}" %>
+<% content_for :description, "#{@game.description}" %>
+
 <div class="game-container">
 
   <% case @game.slug %>
