--- a/app/views/static_pages/home_mobile.html.erb
+++ b/app/views/static_pages/home_mobile.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title, "Play Free Games. Earn real cash." %>
+<% content_for :description, "Play free games to earn credits. Redeem credits for real world rewards!" %>
+
 <% content_for :body_class, "mobile-home" %>
 
 <div class="sign-up">
