--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <!-- Propeller ads -->
     <meta name="propeller" content="6d0c37444c1cbc4f10031a713459e4ba" />
 
+    <meta name="description" content="<%= yield(:description)%>"/>
+
     <%= yield :head_tags %>
 
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
