Add logic to direct all incoming dunkin traffic to designated dunkin pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -61,6 +61,14 @@ textarea {
   max-width: 83.75em;
   width: 100%;
 }
+
+.fine-copy {
+  color: $white;
+  font-size: $xs;
+  text-transform: uppercase;
+  margin-top: 80px;
+}
+
 /* typography */
 
 // h1, h2, h3, h4, h5, h6 {
