--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,110 +1,114 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= full_title(yield(:title)) %></title>
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="/assets/favicon-16x16.png">
+    <head>
+        <title><%= full_title(yield(:title)) %></title>
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="/assets/favicon-16x16.png">
 
-    <!-- FB Open Graph Data -->
-    <meta property="og:url" content="http://www.getluckee.com/" />
-    <meta property="og:title" content="Luckee" />
-    <meta property="og:description" content="Play free games. Earn Real Cash" />
-    <meta property="og:image" content="http://www.getluckee.com/assets/getluckee.jpg" />
+        <!-- FB Open Graph Data -->
+        <meta property="og:url" content="http://www.getluckee.com/" />
+        <meta property="og:title" content="Luckee" />
+        <meta property="og:description" content="Play free games. Earn Real Cash" />
+        <meta property="og:image" content="http://www.getluckee.com/assets/getluckee.jpg" />
 
-    <!-- Propeller ads -->
-    <meta name="propeller" content="6d0c37444c1cbc4f10031a713459e4ba" />
+        <!-- Propeller ads -->
+        <meta name="propeller" content="6d0c37444c1cbc4f10031a713459e4ba" />
 
-    <%= yield :head_tags %>
+        <%= yield :head_tags %>
 
-    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
+        <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-    <!-- Greensock for jackhammer -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"/></script>
+        <!-- Greensock for jackhammer -->
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"/></script>
 
-    <%= csrf_meta_tags %>
-    <%= render 'layouts/shim' %>
+        <%= csrf_meta_tags %>
+        <%= render 'layouts/shim' %>
 
-    <% if Rails.env.production? %>
+        <% if Rails.env.production? %>
 
-      <!-- Facebook Pixel Code -->
-      <script>
-      !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-      n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-      document,'script','https://connect.facebook.net/en_US/fbevents.js');
+            <!-- Facebook Pixel Code -->
+            <script>
+            !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+            n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+            t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+            document,'script','https://connect.facebook.net/en_US/fbevents.js');
 
-      fbq('init', '1639191719738644');
-      fbq('track', "PageView");</script>
-      <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=1639191719738644&ev=PageView&noscript=1"
-      /></noscript>
-      <!-- End Facebook Pixel Code -->
+            fbq('init', '1639191719738644');
+            fbq('track', "PageView");</script>
+            <noscript><img height="1" width="1" style="display:none"
+            src="https://www.facebook.com/tr?id=1639191719738644&ev=PageView&noscript=1"
+            /></noscript>
+            <!-- End Facebook Pixel Code -->
 
-      <script type="text/javascript">
-        !function(a,b,c,d,e,f,g,h){a.RaygunObject=e,a[e]=a[e]||function(){
-        (a[e].o=a[e].o||[]).push(arguments)},f=b.createElement(c),g=b.getElementsByTagName(c)[0],
-        f.async=1,f.src=d,g.parentNode.insertBefore(f,g),h=a.onerror,a.onerror=function(b,c,d,f,g){
-        h&&h(b,c,d,f,g),g||(g=new Error(b)),a[e].q=a[e].q||[],a[e].q.push({
-        e:g})}}(window,document,"script","//cdn.raygun.io/raygun4js/raygun.min.js","rg4js");
-      </script>
+            <script type="text/javascript">
+                !function(a,b,c,d,e,f,g,h){a.RaygunObject=e,a[e]=a[e]||function(){
+                (a[e].o=a[e].o||[]).push(arguments)},f=b.createElement(c),g=b.getElementsByTagName(c)[0],
+                f.async=1,f.src=d,g.parentNode.insertBefore(f,g),h=a.onerror,a.onerror=function(b,c,d,f,g){
+                h&&h(b,c,d,f,g),g||(g=new Error(b)),a[e].q=a[e].q||[],a[e].q.push({
+                e:g})}}(window,document,"script","//cdn.raygun.io/raygun4js/raygun.min.js","rg4js");
+            </script>
 
-      <!-- start google analytics -->
-      <script>
-        var strUserId = null;
-        <% if current_user %>
-        strUserId = "<%= current_user.id %>";
+            <!-- start google analytics -->
+            <script>
+                var strUserId = null;
+                <% if current_user %>
+                strUserId = "<%= current_user.id %>";
+                <% end %>
+
+                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+                ga('create', 'UA-58032053-2', {'userId': strUserId}); //reset third argument to 'auto'
+                ga('set', 'dimension1', strUserId);
+                // if (strUserId) { ga('set', 'userId', strUserId); };
+                ga('send', 'pageview');
+
+            </script>
+            <!-- end google analytics -->
         <% end %>
+    <%= yield(:game_javascript) %>
+    </head>
+    <body class="<%= yield (:body_class) %> <% if current_user %> logged-in <% end %>">
+        <div class="desktop-wrapper">
+        <% if is_dunkin_user? %>
+            <%= render 'static_pages/navigation_desktop_dunkin' %>
+        <% else %>
+            <%= render 'static_pages/navigation_desktop' %>
+        <% end %>
+        <div class="app-wrapper">
+            <% flash.each do |key, value| %>
+                <div class="alert alert-<%= key %>"><%= value %></div>
+            <% end %>
+                <%= yield %>
 
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        </div>
 
-        ga('create', 'UA-58032053-2', {'userId': strUserId}); //reset third argument to 'auto'
-        ga('set', 'dimension1', strUserId);
-        // if (strUserId) { ga('set', 'userId', strUserId); };
-        ga('send', 'pageview');
+        <script type="text/javascript">
+            window.doorbellOptions = {
+                    appKey: 'DXiwSFA07av7bWEUB3bHshorFfU1fsHNJ4RDPy0ra9jnG268xCOuFkjwDsNH5k47'
+            };
+            (function(d, t) {
+                    var g = d.createElement(t);g.id = 'doorbellScript';g.type = 'text/javascript';g.async = true;g.src = 'https://embed.doorbell.io/button/1117?t='+(new Date().getTime());(d.getElementsByTagName('head')[0]||d.getElementsByTagName('body')[0]).appendChild(g);
+            }(document, 'script'));
+        </script>
 
-      </script>
-      <!-- end google analytics -->
+    <% if false %>
+        <!-- GA Tracking Events -->
+        <%# render 'layouts/tracking_events' %>
+
+        <script type="text/javascript">
+                rg4js('apiKey', 'K9ewfiwAigDX1AXxc+lC0Q==');
+                rg4js('attach', true);
+                rg4js('enablePulse', true);
+        </script>
     <% end %>
-  <%= yield(:game_javascript) %>
-  </head>
-  <body class="<%= yield (:body_class) %> <% if current_user %> logged-in <% end %>">
-    <div class="desktop-wrapper">
-      <%= render 'static_pages/navigation_desktop' %>
-    <div class="app-wrapper">
-      <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= value %></div>
-      <% end %>
-        <%= yield %>
-
-    </div>
-
-    <script type="text/javascript">
-      window.doorbellOptions = {
-          appKey: 'DXiwSFA07av7bWEUB3bHshorFfU1fsHNJ4RDPy0ra9jnG268xCOuFkjwDsNH5k47'
-      };
-      (function(d, t) {
-          var g = d.createElement(t);g.id = 'doorbellScript';g.type = 'text/javascript';g.async = true;g.src = 'https://embed.doorbell.io/button/1117?t='+(new Date().getTime());(d.getElementsByTagName('head')[0]||d.getElementsByTagName('body')[0]).appendChild(g);
-      }(document, 'script'));
-    </script>
-
-  <% if false %>
-    <!-- GA Tracking Events -->
-    <%# render 'layouts/tracking_events' %>
-
-    <script type="text/javascript">
-        rg4js('apiKey', 'K9ewfiwAigDX1AXxc+lC0Q==');
-        rg4js('attach', true);
-        rg4js('enablePulse', true);
-    </script>
-  <% end %>
 </div><!--/.desktop-wrapper -->
 
-  <%# render 'layouts/footer' %>
-  </body>
+    <%# render 'layouts/footer' %>
+    </body>
 </html>
