--- a/app/views/games/games_leaderboard.html.erb
+++ b/app/views/games/games_leaderboard.html.erb
@@ -10,9 +10,14 @@
         <% @games.each do | g | %>
             <div class="card-tout" style="background-image:url(/assets/<%= g.game_image({advertiser_id:@advertiser_id,desktop:true}) %>);">
                 <div class="card-inner">
-                    <%= link_to game_leaderboard_path(game_slug:g.slug) do %>
-                        <h1 class="survey__title"><%= g.game_title({advertiser_id:@advertiser_id}) %></h1>
-                        <!-- <span class='card__lower'>View Leaderboard</span> -->
+                    <% if is_dunkin_user? %>
+                        <%= link_to dunkin_game_leaderboard_path do %>
+                            <h1 class="survey__title"><%= g.game_title({advertiser_id:@advertiser_id}) %></h1>
+                        <% end %>
+                    <% else %>
+                        <%= link_to game_leaderboard_path(game_slug:g.slug) do %>
+                            <h1 class="survey__title"><%= g.game_title({advertiser_id:@advertiser_id}) %></h1>
+                        <% end %>
                     <% end %>
                 </div>
             </div>
