Add link to normal site to /dunkin

--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -27,7 +27,7 @@
             <% end %>
     <% end %>
 
-    <p class="fine-copy">This page is for demonstration purposes only.</p>
+    <p class="fine-copy">This page is for demonstration purposes only.<br> For full site visit <a href="/">www.getluckee.com</a></p>
 </div>
 
 <% if is_dunkin_user? %>
