--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -66,7 +66,7 @@
             <% end %>
         <% end %>
 
-        <p class="fine-copy">This page is for demonstration purposes only.</p>
+        <p class="fine-copy">This page is for demonstration purposes only.<br> For full site visit <a style="color:#817bdf;" href="/">www.getluckee.com</p>
 </div><!-- /.game-list-container -->
 
 <% if is_dunkin_user? %>
