--- a/app/views/surveys/_survey_two.html.erb
+++ b/app/views/surveys/_survey_two.html.erb
@@ -46,7 +46,7 @@
 			<div class="control__indicator"></div>
 			</label><!-- /.control .control--radio -->
 
-			<label class="control control--radio">Outside
+			<label class="control control--radio">Other
 			<%= radio_button 'workout', 'location', 'outside' %>
 			<div class="control__indicator"></div>
 			</label><!-- /.control .control--radio -->
@@ -81,7 +81,7 @@
 		</div>
 
 		<div class="survey__question">
-			<p class="survey__question-copy">5. Are you aware of the Starbucks loyalty award program?</p>
+			<p class="survey__question-copy">5. Are you aware of the Dunkin Donuts mobile app?</p>
 
 			<label class="control control--radio">Yes
 			<%= radio_button 'awards', 'yesno', 'yes' %>
