--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -10,7 +10,7 @@
         </script>
 
 
-        
+
         <%= stylesheet_link_tag "mobile", media: "all",
                                                "data-turbolinks-track" => true %>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -222,7 +222,7 @@
                     <% if @game %>
                         <h2 style='font-size:27px;'><%= @game.name %><br /><span class='credits' <% if @game.name == 'Sorcerer Game' %>style='top:0px'<% end %>><%= current_user.credits ||= 0 %> credits</span></h2>
                     <% else %>
-                        <h2><%= link_to games_path do %><img src="/assets/luckee-font.png" class="mobile-header__logo"><% end %><br /><span class='credits mobile-header__credits'><%= current_user.credits ||= 0 %> credits</span></h2>
+                        <h2><%= link_to games_path do %><img src="/assets/small_luckee_font-no-beta.png" class="mobile-header__logo"><% end %><br /><span class='credits mobile-header__credits'><%= current_user.credits ||= 0 %> credits</span></h2>
                     <% end %>
 
                     <div class='referral-link'>
