--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -39,7 +39,7 @@
   <% end %> 
   <% if session[:branded_ad].nil? %>
     <br /> <br/>
-    <p class='game-description container' > 
+    <p class='game-description container' style='clear:both;text-align:center; position:absolute;left:15%; bottom:-200px;' > 
       <%= @game.description %>
     </p>
   <% end %>
