--- a/app/views/static_pages/twentyfortyeight_tut.html.erb
+++ b/app/views/static_pages/twentyfortyeight_tut.html.erb
@@ -26,7 +26,7 @@
         <h1 class="slides__title">Continue swiping and combining tiles until you have no more moves</h1>
         <div class="slides__tut-img" style="background-image: url(/assets/2048-gameboard-3.png);">
         </div>
-        <a href="/games/<%= @game.id %>" class="slides__link">Play Now</a>
+        <a href="/games/<%= @game.slug %>" class="slides__link">Play Now</a>
       </div>
     </li>
   </ul>
