--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -6,6 +6,8 @@
     <% content_for :body_class, "desktop-games-page games-page" %>
 <% end %>
 
+<script src="http://www.youtube.com/player_api"></script>
+
 <% if show_ads %>
     <%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "2440491879"} %>
 <% end %>
@@ -18,7 +20,7 @@
 
 <div class='game-list-container'>
     <% if is_dunkin_user? %>
-        <a href="//www.youtube.com/watch?v=X_X16Iwk4N4" data-lity>
+        <a class="fancybox fancybox.iframe" href="http://www.youtube.com/embed/X_X16Iwk4N4?enablejsapi=1&wmode=opaque">
             <div class="game-wrapper game--fastest-way-to-dd js-game--fastest-way-to-dd">
 
                 <img class="game-image" src="/assets/fastest-way-to-dd.jpg">
@@ -29,7 +31,7 @@
                 </div>
 
             </div> <!--/ .game-wrapper -->
-        </a>
+        </a><!-- /.fancybox -->
     <% end %>
 
         <% @games.each do | g | %>
@@ -71,9 +73,49 @@
         <% end %>
 </div><!-- /.game-list-container -->
 
-<% if is_dunkin_user? %>
-    <script>
-        var lightbox = lity();
-        $(document).on('click', '[data-lity]', lightbox);
-    </script>
-<% end %>
+<script>
+    // Fires whenever a player has finished loading
+    function onPlayerReady(event) {
+        event.target.playVideo();
+        console.log('loaded!');
+    }
+
+    // Fires when the player's state changes.
+    function onPlayerStateChange(event) {
+        // Go to the next video after the current one is finished playing
+        if (event.data === 0) {
+            $.fancybox.close();
+        }
+    }
+
+    // The API will call this function when the page has finished downloading the JavaScript for the player API
+    function onYouTubePlayerAPIReady() {
+
+        // Initialise the fancyBox after the DOM is loaded
+        $(document).ready(function() {
+            $(".fancybox")
+                .attr('rel', 'gallery')
+                .fancybox({
+                    openEffect  : 'none',
+                    closeEffect : 'none',
+                    nextEffect  : 'none',
+                    prevEffect  : 'none',
+                    padding     : 0,
+                    margin      : 50,
+                    beforeShow  : function() {
+                        // Find the iframe ID
+                        var id = $.fancybox.inner.find('iframe').attr('id');
+
+                        // Create video player object and add event listeners
+                        var player = new YT.Player(id, {
+                            events: {
+                                'onReady': onPlayerReady,
+                                'onStateChange': onPlayerStateChange
+                            }
+                        });
+                    }
+                });
+        });
+
+    }
+</script>
