--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -43,6 +43,10 @@ html {
         margin: 0;
     }
 }
+.fine-copy {
+    color: $white;
+    margin-top: 25px;
+}
 .alert {
     position: fixed;
     display: inline-block;
