--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -1,6 +1,6 @@
 <% content_for :body_class, "mobile-games-page games-page" %>
 
-<script src="http://www.youtube.com/player_api"></script>
+<script src="https://www.youtube.com/player_api"></script>
 
 <div class='game-list-container'>
     <% if is_dunkin_user? %>
