--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -15,6 +15,7 @@
 @import "loading";
 @import "surveys";
 @import "verify_email";
+@import "dunkin";
 
 @mixin box_sizing {
     -moz-box-sizing: border-box;
