--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -37,6 +37,7 @@
             <%= render 'games/leaderboard_friends_row', leaderboard_version: 1 %>
 
             <div class="tab-section js-tab-section leaderboard leaderboard--all-time active <% if current_user_record({slug:@game.slug, version: 1, timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
+
                 <%= render 'games/leaderboard_row', { leaderboard_type: "alltime", leaderboard_version: 1} %>
 
                 <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "alltime", leaderboard_version: 1 } %>
@@ -114,8 +115,10 @@
 <% if show_ads %>
     <%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "6870691477"} %>
 <% end %>
-<script>
-    // $(window).load(function(){
-    //     $('.leaderboard-row--current-user').addClass('animate');
-    // })
-</script>
+
+<!-- Image for Dunkin Leaderboard -->
+<section class="dunkin-leaderboard">
+    <%= link_to dunkin_path do %>
+        <img class="dunkin-leaderboard__img" src="/assets/mobile_dunkin_leaderboard_image.png">
+    <% end %>
+</section><!-- /.dunkin-leaderboard -->
