--- a/app/views/games/dunkin_game_leaderboard.html.erb
+++ b/app/views/games/dunkin_game_leaderboard.html.erb
@@ -21,6 +21,14 @@
     <img src="/assets/dunkin-leaderboard.png">
 </section><!-- /.game-leaderboard -->
 
+
+<!-- Image for Dunkin Leaderboard -->
+<section class="dunkin-leaderboard">
+    <%= link_to dunkin_path do %>
+        <img class="dunkin-leaderboard__img" src="/assets/mobile_dunkin_leaderboard_image.png">
+    <% end %>
+</section><!-- /.dunkin-leaderboard -->
+
 <% if show_ads %>
     <%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "6870691477"} %>
 <% end %>
