--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -206,12 +206,24 @@
                     <% if @show_back_button %>
                         <% if @back_button_action %>
                             <span class='<%= @back_button_action %>'style='display:none'><i class="fa fa-chevron-left back-button"></i></span>
-                                <%= link_to games_path, :class=>'back-link' do %>
-                                 <i class="fa fa-chevron-left back-button"></i>
+                                <% if is_dunkin_user? %>
+                                    <%= link_to dunkin_path, :class=>'back-link' do %>
+                                     <i class="fa fa-chevron-left back-button"></i>
+                                    <% end %>
+                                <% else %>
+                                    <%= link_to games_path, :class=>'back-link' do %>
+                                    <i class="fa fa-chevron-left back-button"></i>
+                                    <% end %>
                                 <% end %>
                         <% else @show_back_button %>
-                            <%= link_to games_path do %>
-                             <i class="fa fa-chevron-left back-button"></i>
+                            <% if is_dunkin_user? %>
+                                <%= link_to dunkin_path, :class=>'back-link' do %>
+                                 <i class="fa fa-chevron-left back-button"></i>
+                                <% end %>
+                            <% else %>
+                                <%= link_to games_path, :class=>'back-link' do %>
+                                <i class="fa fa-chevron-left back-button"></i>
+                                <% end %>
                             <% end %>
                         <% end %>
                     <% else %>
