removing video on mobile for now

--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -1,7 +1,7 @@
 <% content_for :body_class, "mobile-games-page games-page" %>
 
 <div class='game-list-container'>
-    <% if is_dunkin_user? %>
+    <% if false && is_dunkin_user? %>
         <a class="fancybox fancybox.iframe" href="http://www.youtube.com/embed/X_X16Iwk4N4?enablejsapi=1&wmode=opaque">
             <div class="game-wrapper game--fastest-way-to-dd js-game--fastest-way-to-dd %>">
                 <img class="game-image" src="/assets/fastest-way-to-dd_mobile.jpg">
