--- a/app/views/ad_units/_ad_wide.html.erb
+++ b/app/views/ad_units/_ad_wide.html.erb
@@ -1,9 +1,11 @@
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Game Page -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-9909143434790892"
-     data-ad-slot="<%= ad_slot %>"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
+  <!-- Game Page -->
+  <ins class="adsbygoogle"
+       style="display:inline-block;width:728px;height:90px"
+       data-ad-client="ca-pub-9909143434790892"
+       data-ad-slot="<%= ad_slot %>"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  setInterval(function(){googletag.pubads().refresh([slot1]);}, 30000);
 </script>
+
