--- a/app/views/games/_gold_runner.html.erb
+++ b/app/views/games/_gold_runner.html.erb
@@ -10,7 +10,9 @@
 		}
 	})();
 	</script>
-
+	<% if show_ads %>
+		<%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "6670921476"} %>
+	<% end %>
 	<!-- The canvas must be inside a div called c2canvasdiv -->
 	<div id="c2canvasdiv">
 
@@ -29,7 +31,9 @@
 		</canvas>
 
 	</div>
-
+	<% if show_ads %>
+		<%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "9624387870"} %>
+	<% end %>
 
  <%= content_for(:game_javascript) do %>
   <%= javascript_include_tag "gold_runner", "data-turbolinks-track" => true %>
