--- a/app/views/games/twentyfortyeight_home.erb
+++ b/app/views/games/twentyfortyeight_home.erb
@@ -1,5 +1,7 @@
 <% content_for :body_class, "intermediate intermediate--2048" %>
-
+<% if show_ads %>
+    <%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "6670921476"} %>
+<% end %>
 <div class="intermediate__wrap">
     <h1 class="game-page__title">2048</h1>
 
@@ -23,3 +25,6 @@
         <h2 class="game-page__subtitle">Play now!</h2>
     <% end %>
 </div>
+<% if show_ads %>
+    <%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "9624387870"} %>
+<% end %>
