attempting fix for adsense

--- a/app/views/games/_twentyfortyeight_m.html.erb
+++ b/app/views/games/_twentyfortyeight_m.html.erb
@@ -17,7 +17,7 @@
     }
   </style>
     <% if show_ads %>
-    <%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "6670921476"} %>
+    <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "6670921476"} %>
   <% end %>
   <div class="gm4html5_div_class" id="gm4html5_div_id">
  <img src="/assets/2048/splash.png" id="GM4HTML5_loadingscreen" alt="smilegames:HTML5 loading screen" style="display:none;max-width:100vw;max-height:100vh;"/>
@@ -27,7 +27,7 @@
       </canvas>
   </div>
   <% if show_ads %>
-    <%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "9624387870"} %>
+    <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "9624387870"} %>
   <% end %>
         <!-- Run the game code -->
 <script>
