--- a/app/views/games/_fall_down_m.html.erb
+++ b/app/views/games/_fall_down_m.html.erb
@@ -19,7 +19,7 @@
 
 	<img class="tower-banner tower-banner--left" src="/assets/dd-pitch.png">
 	<% if show_ads %>
-		<%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "6670921476"} %>
+		<%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "6670921476"} %>
 	<% end %>
 	<!-- The canvas must be inside a div called c2canvasdiv -->
 	<div id="c2canvasdiv">
@@ -40,7 +40,7 @@
 
 	</div>
 	<% if show_ads %>
-		<%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "9624387870"} %>
+		<%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "9624387870"} %>
 	<% end %>
 	<img class="tower-banner tower-banner--right" src="/assets/papi.png">
 
