--- a/app/views/games/_gold_runner.html.erb
+++ b/app/views/games/_gold_runner.html.erb
@@ -11,7 +11,7 @@
 	})();
 	</script>
 	<% if show_ads %>
-		<%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "6670921476"} %>
+		<%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "6670921476"} %>
 	<% end %>
 	<!-- The canvas must be inside a div called c2canvasdiv -->
 	<div id="c2canvasdiv">
@@ -32,7 +32,7 @@
 
 	</div>
 	<% if show_ads %>
-		<%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "9624387870"} %>
+		<%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "9624387870"} %>
 	<% end %>
 
  <%= content_for(:game_javascript) do %>
