--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -66,7 +66,7 @@ html body {
         width: 40vw;
         background-color: $teal;
         color: $white;
-        padding: 10px 0 12px;
+        padding: 10px 10px 12px;
         display: inline-block;
         border-radius: 4px;
         border: 2px solid $teal;
