--- a/app/assets/stylesheets/intermediates.css.scss
+++ b/app/assets/stylesheets/intermediates.css.scss
@@ -250,6 +250,10 @@ body.waitlist-page {
 .affiliate__logo {
     height: 50px;
     width: auto;
+
+    &.affiliate__logo--header {
+        margin: 15px 0;
+    }
 }
 .affiliate-page__copy {
     margin: 20px 0;
