--- a/app/views/games/_tap_color.html.erb
+++ b/app/views/games/_tap_color.html.erb
@@ -10,7 +10,7 @@
     })();
     </script>
     <% if show_ads %>
-        <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "6670921476"} %>
+        <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "6670921476",side:'left'} %>
     <% end %>
     <!-- The canvas must be inside a div called c2canvasdiv -->
     <div id="c2canvasdiv">
@@ -32,7 +32,7 @@
     </div>
     
     <% if show_ads %>
-        <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "9624387870"} %>
+        <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "9624387870",side:'right'} %>
     <% end %>
     <script>
         // Size the canvas to fill the browser viewport.
