--- a/app/views/games/_traffic_m.html.erb
+++ b/app/views/games/_traffic_m.html.erb
@@ -1,6 +1,6 @@
 <% content_for :body_class, "gameplay-page gameplay-page--traffic" %>
 	<% if show_ads %>
-		<%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "6670921476"} %>
+		<%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "6670921476",side:'left'} %>
 	<% end %>
 	<!-- The canvas must be inside a div called c2canvasdiv -->
 	<div id="c2canvasdiv">
@@ -50,7 +50,7 @@
 
     </script>
 	<% if show_ads %>
-		<%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "9624387870"} %>
+		<%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "9624387870",side:'right'} %>
 	<% end %>
 
 <%= content_for(:game_javascript) do %>
