--- a/app/views/games/twentyfortyeight_home.erb
+++ b/app/views/games/twentyfortyeight_home.erb
@@ -1,6 +1,6 @@
 <% content_for :body_class, "intermediate intermediate--2048" %>
 <% if show_ads %>
-    <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "6670921476"} %>
+    <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "6670921476",side:'left'} %>
 <% end %>
 <div class="intermediate__wrap">
     <h1 class="game-page__title">2048</h1>
@@ -26,5 +26,5 @@
     <% end %>
 </div>
 <% if show_ads %>
-    <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "9624387870"} %>
+    <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "9624387870",side:'right'} %>
 <% end %>
