Fix copy on dunkin_video template

--- a/app/views/static_pages/dunkin_video.html.erb
+++ b/app/views/static_pages/dunkin_video.html.erb
@@ -1,7 +1,7 @@
 <section class="affiliate-wrapper">
     <img class="affiliate__logo affiliate__logo--header" src="/assets/ddperks.png">
     <div id="player"></div>
-    <p class="affiliate__msg">Watch the video below and earn 20 credits</p>
+    <p class="affiliate__msg">Watch the video above and earn 20 credits</p>
 
     <%= link_to "Return to games", dunkin_path, class: "btn--homepage btn--homepage-purple" %>
 </section>
