updating adsense styles

--- a/app/views/ad_units/_ad_skyscraper.html.erb
+++ b/app/views/ad_units/_ad_skyscraper.html.erb
@@ -1,4 +1,4 @@
-<div class='adsense-tower tower-banner--#{side}'>
+<div class='adsense-tower adsense-tower--<%= side %>'>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Game Page -->
     <ins class="adsbygoogle"
