--- a/app/views/games/_gold_runner.html.erb
+++ b/app/views/games/_gold_runner.html.erb
@@ -1,4 +1,4 @@
-<% content_for :body_class, "gameplay-page gameplay-page--gold-runner" %>
+<% content_for :body_class, "gameplay-page gameplay-page--gold-runner #{show_ads ? 'gameplay-page--adsense' : ''}" %>
 
 <script>
 	// Issue a warning if trying to preview an exported project on disk.
