--- a/app/views/games/_tap_color.html.erb
+++ b/app/views/games/_tap_color.html.erb
@@ -1,4 +1,4 @@
-<% content_for :body_class, "gameplay-page gameplay-page--tap-color" %>
+<% content_for :body_class, "gameplay-page gameplay-page--tap-color #{show_ads ? 'gameplay-page--adsense' : ''}" %>
     <script>
     // Issue a warning if trying to preview an exported project on disk.
     (function(){
