--- a/app/views/games/_traffic_m.html.erb
+++ b/app/views/games/_traffic_m.html.erb
@@ -1,4 +1,4 @@
-<% content_for :body_class, "gameplay-page gameplay-page--traffic" %>
+<% content_for :body_class, "gameplay-page gameplay-page--traffic #{show_ads ? 'gameplay-page--adsense' : ''}" %>
 	<% if show_ads %>
 		<%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "6670921476",side:'left'} %>
 	<% end %>
