removing ad-reload after 30 seconds, not working at moment

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <%= render 'layouts/shim' %>
 
         <% if Rails.env.production? %>
-            <% if show_ads %>
+            <% if false && show_ads %>
                 <script type="text/javascript">
                   var googletag = googletag || {};
                   googletag.cmd = googletag.cmd || [];
