--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -139,7 +139,8 @@
             </script>
             <!-- end google analytics -->
         <% end %>
-        <%= yield(:game_javascript) %>
+        <%= yield :extra_top_js %>
+        <%= yield :game_javascript %>
     </head>
     <body ondragstart="return false;" ondrop="return false;" id="<%= yield (:body_id) %>" class="<%= yield (:body_class) %> <% if @game && Game.where(slug:['traffic','flappy-pilot','fall-down','tap-color','gold-runner']).pluck(:id).include?(@game.id) %> mobile-header--hide <% end %> <% if current_user %> logged-in <% end %> <% if is_dunkin_user? %>dunkin-tester--mobile<% end %>">
 
