attempting another fix

--- a/app/views/games/_twentyfortyeight_m.html.erb
+++ b/app/views/games/_twentyfortyeight_m.html.erb
@@ -29,8 +29,8 @@
       <div class="game-message">
         <p></p>
         <div class="lower">
-          <a class="keep-playing-button">Keep going</a>
-          <a class="retry-button">Try again</a>
+          <a class="keep-playing-button" href='/games/2048'>Keep going</a>
+          <a class="retry-button" href='/games/2048'>Try again</a>
         </div>
       </div>
 
