--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,7 +123,7 @@
         </script>
     <% end %>
 </div><!--/.desktop-wrapper -->
-
+    <%= yield(:extra_bottom_js) %>
     <%# render 'layouts/footer' %>
     </body>
 </html>
