--- a/app/views/games/_twentyfortyeight_m.html.erb
+++ b/app/views/games/_twentyfortyeight_m.html.erb
@@ -70,6 +70,13 @@
   <% if show_ads %>
     <%= render partial: "/ad_units/ad_skyscraper", :locals => {ad_slot: "9624387870",side:'right'} %>
   <% end %>
-<%= content_for(:extra_bottom_js) do %>
-  <%= javascript_include_tag "twentyfortyeight" %>
-<% end %>
+  <% if show_ads %>
+    <%= content_for(:extra_bottom_js) do %>
+      <%= javascript_include_tag "twentyfortyeight" %>
+    <% end %>
+  <% else %>
+    <%= content_for(:game_javascript) do %>
+      <%= javascript_include_tag "twentyfortyeight" %>
+    <% end %>
+  <% end %>
+
