--- a/app/views/games/show_mobile.html.erb
+++ b/app/views/games/show_mobile.html.erb
@@ -1,6 +1,18 @@
 <% content_for :title, "#{@game.name}" %>
 <% content_for :description, "#{@game.description}" %>
-
+<% if show_mobile_ads %>
+  <% if Rails.env.production? %>
+    <%= content_for :extra_top_js do %>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-9909143434790892",
+          enable_page_level_ads: true
+        });
+      </script>
+    <% end %>
+  <% end %>
+<% end %>
 <div class="game-container <%= @game.slug =='2048' ? 'g-2048' : '' %>">
 
   <% case @game.slug %>
