Initial commit of match 3, some minor tweaks and fixes as well

--- a/app/views/ad_units/_ad_skyscraper.html.erb
+++ b/app/views/ad_units/_ad_skyscraper.html.erb
@@ -1,6 +1,6 @@
 <div class='adsense-tower adsense-tower--<%= side %>'>
 
-<% if true || Rails.env.production? %>
+<% if Rails.env.production? %>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Game Page -->
     <ins class="adsbygoogle"
