--- a/app/views/games/show_mobile.html.erb
+++ b/app/views/games/show_mobile.html.erb
@@ -31,7 +31,9 @@
     <% when 'tap-color' %>
      <%= render 'tap_color' %>  
     <% when 'gold-runner' %>
-      <%= render 'gold_runner' %>      
+      <%= render 'gold_runner' %>    
+    <% when 'match-three' %>
+      <%= render 'match_three' %>   
   <% end %>
 </div>
 
