--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -82,6 +82,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="mobile-web-app-capable" content="yes">
 
+        <!-- Keywords to help adsense targetting -->
+        <meta name='keywords' content='games, rewards, free, play, gaming, free games, play free online, earn cash, cash, cash rewards, charity, play free games, flappy bird, 2048, frogger, candy crush, bejewled, stick runner, match three, match 3, mobile games, mobile, desktop games, browser games, html5 games'>
 
         <!-- Tile icon for Win8 (144x144 + tile color) -->
         <meta name="msapplication-TileImage" content="img/touch/apple-touch-icon-144x144-precomposed.png">
