updating leaderboard to just weekly and all time, removing Facebook option from sign up pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1475,7 +1475,7 @@ h1.arrow2 { font-size: 55px;
     }
     .email-form{
         z-index:10;
-        display:none;
+        //display:none;
         h2{
             color:$dark-font;
         }
