--- a/app/assets/stylesheets/sign_in.css.scss
+++ b/app/assets/stylesheets/sign_in.css.scss
@@ -107,6 +107,8 @@ html body.desktop-signin-page {
       margin-right: 5%;
       font-family: $sans;
       font-size: 14px;
+      position: relative;
+      top: -2px;
     }
 
     .sub-links__title,
