--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -144,7 +144,7 @@
         <%= yield :extra_top_js %>
         <%= yield :game_javascript %>
     </head>
-    <body ondragstart="return false;" ondrop="return false;" id="<%= yield (:body_id) %>" class="<%= yield (:body_class) %> <% if @game && Game.where(slug:['traffic','flappy-pilot','fall-down','tap-color','gold-runner','match-three']).pluck(:id).include?(@game.id) %> mobile-header--hide <% end %> <% if current_user %> logged-in <% end %> <% if is_dunkin_user? %>dunkin-tester--mobile<% end %>">
+    <body ondragstart="return false;" ondrop="return false;" id="<%= yield (:body_id) %>" class="<%= yield (:body_class) %> <% if @game && Game.where(slug:['traffic','flappy-pilot','fall-down','tap-color','gold-runner','match-three']).pluck(:id).include?(@game.id) %>mobile-header--hide<% end %> <% if current_user %>logged-in<% end %> <% if is_dunkin_user? %>dunkin-tester--mobile<% end %> <% if Rails.env.development? %>development<% end %>">
 
         <%= render 'layouts/form_errors' %>
         <%= render 'layouts/loading_screen' %>
