Remove preview in browser link on mobile add to homescreen overlay

--- a/app/views/static_pages/_overlay_add_to_home.html.erb
+++ b/app/views/static_pages/_overlay_add_to_home.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <!-- All users must add to homescreen for now - unless in dev, then show -->
-<% if !Rails.env.production? %>
+<% if false %>
     <a href="/" class="js-overlay__opt-out overlay__opt-out ga-preview-event">Preview in Browser</a>
 <% end %>
 
